src/test/ui/borrowck/reassignment_immutable_fields_twice.stderr
error[E0594]: cannot assign to `x.0`, as `x` is not declared as mutable
  --> $DIR/reassignment_immutable_fields_twice.rs:7:5
   |
LL |     let x: (u32, u32);
   |         - help: consider changing this to be mutable: `mut x`
LL |     x = (22, 44);
LL |     x.0 = 1;
   |     ^^^^^^^ cannot assign

<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
error[E0381]: assign to part of possibly uninitialized variable: `x`
=======
error[E0381]: assign to part of possibly-uninitialized variable: `x`
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
  --> $DIR/reassignment_immutable_fields_twice.rs:12:5
   |
LL |     x.0 = 1;
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
   |     ^^^^^^^ use of possibly uninitialized `x`
=======
   |     ^^^^^^^ use of possibly-uninitialized `x`
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0381`.
